--- a/doc/sprawozdanie/sprawozdanie.tex
+++ b/doc/sprawozdanie/sprawozdanie.tex
@@ -231,7 +231,9 @@ W wyniku działania programu generowane są:
 \begin{itemize}
 	\item Wykresy: \texttt{training\_history.png}, \texttt{error\_analysis\_*.png},
 	\item Modele: \texttt{model\_bez\_outlierow.pth}, \texttt{model\_z\_outlierami.pth},
-	\item Dane wyjściowe: \texttt{dystrybuanta\_*.xlsx}, \texttt{wyniki\_szczegolowe.xlsx}, \texttt{raport\_podsumowanie.txt}.
+	\item Dane wyjściowe: \texttt{dystrybuanta\_*.xlsx}, \texttt{wyniki\_szczegolowe.xlsx},
+
+	      \texttt{raport\_podsumowanie.txt}.
 \end{itemize}
 
 Plik ten stanowi główny komponent praktyczny systemu korekcji błędów i integruje cały proces od wczytania danych po ocenę skuteczności modelu.
